<PreferenceScreen
    android:layout="@layout/preference_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settingTitle">
    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="基本设置">

        <CheckBoxPreference
            android:layout="@layout/preference_item"
            android:title="省流量模式"
            android:key="notify_priority"
            android:summaryOn="仅在Wi-Fi环境下自动加载图片"
            android:summaryOff="当前为一般模式(默认)"
            android:defaultValue="false"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="night_switch"
            android:summary="@string/darkModesummary"
            android:title="@string/darkMode" />
        <!--<Preference-->
            <!--android:layout="@layout/preference_item"-->
            <!--android:title="在通知栏显示音标"-->
            <!--android:summary="当前为不显示"-->
            <!--android:defaultValue="false"/>-->
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category_widget"
        android:title="账号设置"
        android:key="key_usersetting">

        <PreferenceScreen
            android:layout="@layout/preference_item"
            android:summary="修改当前用户密码"
            android:title="@string/changepassword"
            android:key="key_changepw">

            <!--<intent-->
                <!--android:action="android.intent.action.MAIN"-->
                <!--android:targetPackage="com.example.Setting"-->
                <!--android:targetClass="com.example.Setting.ChangePwActivity"-->
                <!--/>-->
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
    android:layout="@layout/preference_category_widget"
    android:title="关于与帮助"
        android:key="key_about_help">
        <Preference
            android:layout="@layout/preference_item"
            android:title="@string/suggestion"
            android:key="key_suggestion"/>

        <Preference
            android:layout="@layout/preference_item"
            android:title="@string/checkupdate"
            android:key="key_checkupdate"/>

        <Preference
            android:layout="@layout/preference_item"
            android:summary="我的项目地址：https://github.com/xiaoshidefeng/PLUS-for-Android"
            android:title="作者：小时的疯"
            android:key="key_aboutprojectlink"/>

        <Preference
            android:layout="@layout/preference_item_exit"
            android:title="@string/exitlogin"
            android:key="key_exit"/>
    </PreferenceCategory>
</PreferenceScreen>